--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>上方ManGunners -カバディ-</title>
+  <title>大阪カバディチーム 上方ManGunners</title>
+  <meta name="description" content="大阪を中心に活動する関西のカバディーチームです。初心者から日本代表候補が所属するチームです。20代中心にアットホームに活動しています。">
   <!-- reset css -->
   <link rel="stylesheet" href="./css/ress.css">
   <!-- style.css -->
   <link rel="stylesheet" href="./css/style.css">
+
+  <!-- slick -->
+<link rel="stylesheet" href="./slick/slick.css">
+<link rel="stylesheet" href="./slick/slick-theme.css">
 
   <!-- google font EN font-family: 'Playfair Display', serif;   -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -32,11 +37,11 @@
       <li>活動</li>
       <li>メンバー募集</li>
     </ul>
-    <div class="burger">
+    <!-- <div class="burger">
       <span class="bar bar__top"></span>
       <span class="bar bar__mid"></span>
       <span class="bar bar__bottom"></span>
-    </div>
+    </div> -->
   </nav>
 
   <!-- スマホ時のナビゲーションメニュー -->
@@ -49,20 +54,39 @@
     </ul>
   </div>
 
-  <section class="main">
+
+<!-- fv slider練習 -->
+<div class="fv">
+  <div class="fv__box fv__1">
     <h1 class="main__title">
       上方ManGunners
     </h1>
-  </section>
+  </div>
+  <div class="fv__box fv__2"></div>
+  <div class="fv__box fv__3"></div>
+</div>
 
+
+
+  <!-- fv画像 -->
+  <!-- <section class="main">
+    <h1 class="main__title">
+      上方ManGunners
+    </h1>
+  </section> -->
+
+
+
+  <!-- team -->
   <section class="team">
     <div class="wrapper flex" id="team">
 
       <div class="section__left">
         <h1 class="section__title">
-          チームプロフィール
+          上方ManGunners
         </h1>
         <p class="section__sentence">
+          上方ManGunnersは、<br>
           大阪中心とした関西を拠点に活動する、
           カバディーチームです。<br>
           日本代表候補から初心者まで、
@@ -138,6 +162,8 @@
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+<!-- slick -->
+<script src="./slick/slick.js"></script>
 
 <!-- Javascript -->
 <script src="./javascript/index.js"></script>
