--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   <!-- google font EN font-family: 'Playfair Display', serif;   -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&display=swap" rel="stylesheet">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8CLHY33287"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8CLHY33287');
+</script>
   
 <!-- google font JA  -->
 
@@ -25,17 +35,25 @@
 <body>
 
   <header>
-    <h1 class="header__title">
+    <h1 class="header__title" name="top">
       関西カバディ
     </h1>
   </header>
   
   <nav class="nav__top">
     <ul>
-      <li>ホーム</li>
-      <li>チーム</li>
-      <li>活動</li>
-      <li>メンバー募集</li>
+      <a href="#top">
+        <li>ホーム</li>
+      </a>
+      <a href="#team">
+        <li>チーム</li>
+      </a>
+      <a href="#practice">
+        <li>活動</li>
+      </a>
+      <a href="#newMember">
+        <li>メンバー募集</li>
+      </a>
     </ul>
     <!-- <div class="burger">
       <span class="bar bar__top"></span>
@@ -78,7 +96,7 @@
 
 
   <!-- team -->
-  <section class="team">
+  <section class="team" name="team">
     <div class="wrapper flex" id="team">
 
       <div class="section__left">
@@ -105,7 +123,7 @@
   </section>
 
 
-  <section class="practice">
+  <section class="practice" name="practice">
     <div class="wrapper flex" id="practice">
       <div class="section__left twitter">
         <a class="twitter-timeline" data-lang="ja" data-width="100%" data-height="400" data-theme="dark" href="https://twitter.com/k_mangunners?ref_src=twsrc%5Etfw">Tweets by k_mangunners</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -127,7 +145,7 @@
     </div>
     </section>
   
-  <section class="newMember">
+  <section class="newMember" name="newMember">
     <div class="wrapper flex" id="newMember">
 
       <div class="section__left">
