--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
   
 <!-- google font JA  -->
 
+<!-- FontAwesome　CDN -->
+<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+
 </head>
 <body>
 
   <header>
     <h1 class="header__title" name="top">
-      関西カバディ
+      関西カバディ 上方ManGunners
     </h1>
   </header>
   
@@ -129,17 +132,17 @@
         <a class="twitter-timeline" data-lang="ja" data-width="100%" data-height="400" data-theme="dark" href="https://twitter.com/k_mangunners?ref_src=twsrc%5Etfw">Tweets by k_mangunners</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
       <div class="section__right">
-        <h1 class="section__title">
+        <h1 class="section__title section__blue">
           活動状況
         </h1>
         <p class="section__sentence">
-          主な活動場所<br>
+          <span class="circle"></span>主な活動場所<br>
           大阪市内の体育館<br>
-          練習日<br>
+          <span class="circle"></span>練習日<br>
           週２日程度<br>
           ＊平日：19時−22時<br>
           ＊休日：9時−12時,15時-18時<br>
-          最新情報は公式Twitterをご覧下さい
+          最新情報は公式Twitter<i class="fab fa-twitter"></i>をご覧下さい
         </p>
       </div>
     </div>
@@ -155,7 +158,7 @@
         <p class="section__sentence">
           上方Mangunnnersは新メンバーを募集しています。<br>
           体験カバディ・入団希望の方は、<br>
-          Twitter又はメール、電話にて連絡下さい。
+          Twitter<i class="fab fa-twitter"></i>又はメール、電話にて連絡下さい。
         </p>
 
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeu3KQo2SR3uRNPXUozo8BC0pB69SfamwjODR89oiecTAkGQQ/viewform?usp=sf_link">
