--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 <!-- FontAwesome　CDN -->
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
+<!-- ファビコン -->
+<link rel="icon" href="./img/favicon.png">
+
 </head>
 <body>
 
@@ -58,14 +61,14 @@
         <li>メンバー募集</li>
       </a>
     </ul>
-    <!-- <div class="burger">
+    <div class="burger">
       <span class="bar bar__top"></span>
       <span class="bar bar__mid"></span>
       <span class="bar bar__bottom"></span>
-    </div> -->
+    </div>
   </nav>
 
-  <!-- スマホ時のナビゲーションメニュー -->
+  <!-- ハンバーガー押した時、スマホ時のナビゲーションメニュー -->
   <div class="nav__media">
     <ul>
       <li><a href="">トップ</a></li>
@@ -76,7 +79,7 @@
   </div>
 
 
-<!-- fv slider練習 -->
+<!-- fv slider -->
 <div class="fv">
   <div class="fv__box fv__1">
     <h1 class="main__title">
