--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
     <p>&copy;上方ManGunners</p>
   </footer>
 
+  <div id="page__top"><a href="#top">Top</a></div>
+
 
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
